--- a/11.HTML,CSS,JAVA/Project/hunfooter.html
+++ b/11.HTML,CSS,JAVA/Project/hunfooter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        img{ /* 마우스 오버 했을 때 테두리가 가도록 수정 - 곻간을 미리 할당 */
+        img{ /* 마우스 오버 했을 때 테두리가 가도록 수정 - 공간을 미리 할당 */
             border: 2px solid white;
         }
     
